--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,11 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+<ion-list>
+  <ion-item detail="true" button routerLink="/three-jssample-list">
+    <ion-label>Three.js</ion-label>
+  </ion-item>
+  <ion-item detail="true" button routerLink="/d3js-sample-list">
+    <ion-label>d3.js</ion-label>
+  </ion-item>
+  <ion-item detail="true" button routerLink="/tensor-flowjs-sample-list">
+    <ion-label>TensorFlowJS</ion-label>
+  </ion-item>
+</ion-list>
