--- a/src/app/pages/d3js/d3js-sample-list/d3js-sample-list.page.html
+++ b/src/app/pages/d3js/d3js-sample-list/d3js-sample-list.page.html
@@ -6,6 +6,9 @@
 
 <ion-content>
   <ion-list>
+    <ion-item detail="false" button routerLink="basic-chart">
+      <ion-label>Tidy Stacked Area Chart</ion-label>
+    </ion-item>
     <ion-item detail="false" button>
       <ion-label>d3-array d3.cumsum</ion-label>
     </ion-item>
