--- a/src/app/pages/tensorflowjs/tensor-flowjs-sample-list/tensor-flowjs-sample-list.page.html
+++ b/src/app/pages/tensorflowjs/tensor-flowjs-sample-list/tensor-flowjs-sample-list.page.html
@@ -9,6 +9,9 @@
     <ion-item detail="false" button routerLink="offline-chat-bot">
       <ion-label>Offline ChatBot</ion-label>
     </ion-item>
+    <ion-item detail="false" button routerLink="quick-sample">
+      <ion-label>Quick sample</ion-label>
+    </ion-item>
     <ion-item detail="false" button>
       <ion-label>Digit Recognizer with Layers (MNIST)</ion-label>
     </ion-item>
