--- a/src/app/pages/threejs/three-jssample-list/three-jssample-list.page.html
+++ b/src/app/pages/threejs/three-jssample-list/three-jssample-list.page.html
@@ -7,11 +7,11 @@
 
 <ion-content>
   <ion-list>
-    <ion-item detail="false" button>
-      <ion-label>animation cloth</ion-label>
+    <ion-item detail="false" button routerLink="basic3">
+      <ion-label>Basic</ion-label>
     </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation keyframes</ion-label>
+    <ion-item detail="false" button routerLink="lights-hemisphere">
+      <ion-label>Lights / Hemisphere</ion-label>
     </ion-item>
     <ion-item detail="false" button>
       <ion-label>animation skinning blending</ion-label>
