--- a/src/app/pages/threejs/three-jssample-list/three-jssample-list.page.html
+++ b/src/app/pages/threejs/three-jssample-list/three-jssample-list.page.html
@@ -13,59 +13,8 @@
     <ion-item detail="false" button routerLink="lights-hemisphere">
       <ion-label>Lights / Hemisphere</ion-label>
     </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation skinning blending</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation skinning additive blending</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation skinning morph</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation multiple</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>camera</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>camera array</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
-    </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>animation / cloth</ion-label>
+    <ion-item detail="false" button routerLink="cloth-simulation">
+      <ion-label>Cloth Simulation</ion-label>
     </ion-item>
   </ion-list>
 
