--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,4 +8,7 @@
   <ion-item detail="true" button routerLink="/tensor-flowjs-sample-list">
     <ion-label>TensorFlowJS</ion-label>
   </ion-item>
+  <ion-item detail="true" button>
+    <ion-label>Native</ion-label>
+  </ion-item>
 </ion-list>
