--- a/src/app/pages/threejs/three-jssample-list/three-jssample-list.page.html
+++ b/src/app/pages/threejs/three-jssample-list/three-jssample-list.page.html
@@ -16,6 +16,9 @@
     <ion-item detail="false" button routerLink="cloth-simulation">
       <ion-label>Cloth Simulation</ion-label>
     </ion-item>
+    <ion-item detail="false" button routerLink="littlest-tokyo">
+      <ion-label>Littlest Tokyo</ion-label>
+    </ion-item>
   </ion-list>
 
 </ion-content>
