try dicom viewer

--- a/src/app/pages/d3js/d3js-sample-list/components/basic-chart/basic-chart.component.html
+++ b/src/app/pages/d3js/d3js-sample-list/components/basic-chart/basic-chart.component.html
@@ -1,5 +1,5 @@
 <div class="spinner-container">
     <ion-spinner name="crescent" color="primary" *ngIf="isBusy"></ion-spinner>
 </div>
-<div #svg>
+<div #svg class="BasicChart">
 </div>
