--- a/src/app/pages/d3js/d3js-sample-list/d3js-sample-list.page.html
+++ b/src/app/pages/d3js/d3js-sample-list/d3js-sample-list.page.html
@@ -12,11 +12,11 @@
     <ion-item detail="false" button routerLink="cumsum">
       <ion-label>d3-array Cumsum</ion-label>
     </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>d3-array Tidy Stacked Area Chart</ion-label>
+    <ion-item detail="false" button routerLink="bar-chart-race">
+      <ion-label>Bar Chart Race</ion-label>
     </ion-item>
-    <ion-item detail="false" button>
-      <ion-label>d3-array d3.zip, d3.transpose</ion-label>
+    <ion-item detail="false" button routerLink="versor-dragging-map">
+      <ion-label>Version Dragging on Map</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
