--- a/src/app/pages/threejs/three-jssample-list/three-jssample-list.page.html
+++ b/src/app/pages/threejs/three-jssample-list/three-jssample-list.page.html
@@ -19,6 +19,9 @@
     <ion-item detail="false" button routerLink="littlest-tokyo">
       <ion-label>Littlest Tokyo</ion-label>
     </ion-item>
+    <ion-item detail="false" button routerLink="skeletal-animation-blending">
+      <ion-label>Skeletal Animation Blending</ion-label>
+    </ion-item>
   </ion-list>
 
 </ion-content>
