add sample additive animation skinning

--- a/src/app/pages/threejs/three-jssample-list/three-jssample-list.page.html
+++ b/src/app/pages/threejs/three-jssample-list/three-jssample-list.page.html
@@ -22,6 +22,9 @@
     <ion-item detail="false" button routerLink="skeletal-animation-blending">
       <ion-label>Skeletal Animation Blending</ion-label>
     </ion-item>
+    <ion-item detail="false" button routerLink="additive-animation-skinning">
+      <ion-label>Additive Animation Skinning</ion-label>
+    </ion-item>
   </ion-list>
 
 </ion-content>
